testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag6.errors.txt
test.js(1,12): error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
test.js(7,5): error TS2322: Type '(prop: any) => void' is not assignable to type '{ prop: string; }'.
test.js(10,12): error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
test.js(23,12): error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
test.js(33,14): error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.


==== test.js (5 errors) ====
    /** @type {number} */
               ~~~~~~
!!! error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
    function f() {
        return 1
    }
    
    /** @type {{ prop: string }} */
    var g = function (prop) {
        ~
!!! error TS2322: Type '(prop: any) => void' is not assignable to type '{ prop: string; }'.
    }
    
    /** @type {(a: number) => number} */
               ~~~~~~~~~~~~~~~~~~~~~
!!! error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
    function add1(a, b) { return a + b; }
    
    /** @type {(a: number, b: number) => number} */
    function add2(a, b) { return a + b; }
    
    // TODO: Should be an error since signature doesn't match.
    /** @type {(a: number, b: number, c: number) => number} */
    function add3(a, b) { return a + b; }
    
    // Confirm initializers are compatible.
    // They can't have more parameters than the type/context.
    
    /** @type {() => void} */
               ~~~~~~~~~~
!!! error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
    function funcWithMoreParameters(more) {} // error
    
    /** @type {() => void} */
    const variableWithMoreParameters = function (more) {}; // error
    
    /** @type {() => void} */
    const arrowWithMoreParameters = (more) => {}; // error
    
    ({
      /** @type {() => void} */
                 ~~~~~~~~~~
!!! error TS8030: A JSDoc '@type' tag on a function must have a signature with the correct number of arguments.
      methodWithMoreParameters(more) {}, // error
    });
    